fix bug in style.css - .page__sub-title was not centered in smaller screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,5 +12,6 @@
 @media (max-width: 500px) {
   .page__sub-title {
     width: 90%;
+    margin: 1rem auto;
   }
 }
